update hero section

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light" id="header">
         <div class="container">
-          <a class="navbar-brand" href="">
-            Andrii M.
-          </a>
+          <a class="navbar-brand" href=""> Andrii M. </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -58,9 +56,9 @@
     <div id="hero">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-6 mt-lg-0 d-grid align-content-center">
+          <div class="col-12 d-grid align-content-center justify-content-center">
             <section
-              class="text-center text-lg-start"
+              class="text-center"
               data-aos="zoom-in"
               data-aos-delay="1000"
               data-aos-duration="1000"
@@ -68,8 +66,8 @@
               <p>Hello! 👋 My name is</p>
               <h1>ANDRII MAISTRENKO</h1>
               <p><span id="headline"></span></p>
-              <div class="social-links mx-auto mx-lg-0">
-                <div class="row">
+              <div class="social-links mx-auto">
+                <div class="row justify-content-center">
                   <div class="col-3">
                     <a href="mailto:andrii.maist@gmail.com" target="_blank">
                       <i class="bi bi-envelope-fill"></i>
@@ -83,27 +81,6 @@
                 </div>
               </div>
             </section>
-          </div>
-          <div class="col-12 col-lg-6 d-grid align-content-center">
-            <div
-              class="img-container"
-              id="img-wrapper"
-              data-aos="fade-left"
-              data-aos-duration="1500"
-              data-aos-delay="2000"
-            >
-              <div id="canvas"></div>
-
-              <div class="curtain">
-                <img
-                  src="./img/me.png"
-                  crossorigin=""
-                  data-sampler="simplePlaneTexture"
-                  width="400"
-                  height="400"
-                />
-              </div>
-            </div>
           </div>
         </div>
       </div>
