--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,9 @@
     <div id="hero">
       <div class="container">
         <div class="row">
-          <div class="col-12 d-grid align-content-center justify-content-center">
+          <div
+            class="col-12 d-grid align-content-center justify-content-center"
+          >
             <section
               class="text-center"
               data-aos="zoom-in"
@@ -590,6 +592,22 @@
               <div class="project" data-aos="flip-up" data-aos-duration="1000">
                 <img
                   src="./img/certifications/node_basic.png"
+                  alt="sunnysdie company"
+                />
+              </div>
+            </div>
+            <div>
+              <div class="project" data-aos="flip-up" data-aos-duration="1000">
+                <img
+                  src="./img/certifications/css.png"
+                  alt="sunnysdie company"
+                />
+              </div>
+            </div>
+            <div>
+              <div class="project" data-aos="flip-up" data-aos-duration="1000">
+                <img
+                  src="./img/certifications/python.png"
                   alt="sunnysdie company"
                 />
               </div>
